--- a/EMPLOYEE_MANAGEMENT.Infrastructure/EMPLOYEE_MANAGEMENT.Infrastructure.csproj
+++ b/EMPLOYEE_MANAGEMENT.Infrastructure/EMPLOYEE_MANAGEMENT.Infrastructure.csproj
@@ -28,6 +28,7 @@
 
 
 	<ItemGroup>
+	  <ProjectReference Include="..\EMPLOYEE_MANAGEMENT.Application\EMPLOYEE_MANAGEMENT.Application.csproj" />
 	  <ProjectReference Include="..\EMPLOYEE_MANAGEMENT.Domain\EMPLOYEE_MANAGEMENT.Domain.csproj" />
 	</ItemGroup>
 
